tests/rosetta/out/C/abbreviations-simple.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:37Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int fields(char *s) {
  list_string tmp1 = {0, NULL};
  int words = tmp1;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t") {
      if (strlen(cur) > 0) {
        list_string tmp2 = list_string_create(1);
        tmp2.data[0] = cur;
        list_string tmp3 = concat_list_string(words, tmp2);
        words = tmp3;
        cur = "";
      }
    } else {
      char *tmp4 = concat_string(cur, ch);
      cur = tmp4;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = cur;
    list_string tmp6 = concat_list_string(words, tmp5);
    words = tmp6;
  }
  return words;
}

const char *padRight(char *s, int width) {
  const char *out = s;
  int i = strlen(s);
  while (i < width) {
    char *tmp7 = concat_string(out, " ");
    out = tmp7;
    i = i + 1;
  }
  return out;
}

const char *join(list_string xs, char *sep) {
  const char *res = "";
  int i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp8 = concat_string(res, sep);
      res = tmp8;
    }
    char *tmp9 = concat_string(res, xs.data[i]);
    res = tmp9;
    i = i + 1;
  }
  return res;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp10 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp10 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int digits = (tmp_item_t){._ = 0,
                                       ._ = 1,
                                       ._ = 2,
                                       ._ = 3,
                                       ._ = 4,
                                       ._ = 5,
                                       ._ = 6,
                                       ._ = 7,
                                       ._ = 8,
                                       ._ = 9};
  while ((i < str.len)) {
    char *tmp11 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp11);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

int isDigits(char *s) {
  if (strlen(s) == 0) {
    return 0;
  }
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, "0") < 0) || ch > "9") {
      return 0;
    }
    i = i + 1;
  }
  return 1;
}

int readTable(char *table) {
  int toks = fields(table);
  list_string tmp12 = {0, NULL};
  int cmds = tmp12;
  list_int mins = list_int_create(0);
  int i = 0;
  while (i < toks.len) {
    const char *cmd = toks.data[i];
    int minlen = strlen(cmd);
    i = i + 1;
    if (i < toks.len && isDigits(toks.data[i])) {
      int num = parseIntStr(toks.data[i]);
      if ((num >= 1 && num < strlen(cmd))) {
        minlen = num;
        i = i + 1;
      }
    }
    list_string tmp13 = list_string_create(1);
    tmp13.data[0] = cmd;
    list_string tmp14 = concat_list_string(cmds, tmp13);
    cmds = tmp14;
    mins = 0;
  }
  return (tmp_item_t){.commands = cmds, .mins = mins};
}

int validate(list_string commands, list_int mins, list_string words) {
  list_string tmp15 = {0, NULL};
  int results = tmp15;
  int wi = 0;
  while (wi < words.len) {
    const char *w = words.data[wi];
    int found = 0;
    int wlen = strlen(w);
    int ci = 0;
    while (ci < commands.len) {
      const char *cmd = commands.data[ci];
      if (mins.data[ci] != 0 && wlen >= mins.data[ci] && wlen <= strlen(cmd)) {
        const char *c = upper(cmd);
        const char *ww = upper(w);
        if (slice_string(c, 0, wlen) == ww) {
          list_string tmp16 = list_string_create(1);
          tmp16.data[0] = c;
          list_string tmp17 = concat_list_string(results, tmp16);
          results = tmp17;
          found = 1;
          break;
        }
      }
      ci = ci + 1;
    }
    if ((!found)) {
      list_string tmp18 = list_string_create(1);
      tmp18.data[0] = "*error*";
      list_string tmp19 = concat_list_string(results, tmp18);
      results = tmp19;
    }
    wi = wi + 1;
  }
  return results;
}

int main() {
  char *tmp20 = concat_string("", "add 1  alter 3  backup 2  bottom 1  Cappend "
                                  "2  change 1  Schange  Cinsert 2  Clast 3 ");
  char *tmp21 =
      concat_string(tmp20, "compress 4 copy 2 count 3 Coverlay 3 cursor 3  "
                           "delete 3 Cdelete 2  down 1  duplicate ");
  char *tmp22 =
      concat_string(tmp21, "3 xEdit 1 expand 3 extract 3  find 1 Nfind 2 "
                           "Nfindup 6 NfUP 3 Cfind 2 findUP 3 fUP 2 ");
  char *tmp23 =
      concat_string(tmp22, "forward 2  get  help 1 hexType 4  input 1 "
                           "powerInput 3  join 1 split 2 spltJOIN load ");
  char *tmp24 =
      concat_string(tmp23, "locate 1 Clocate 2 lowerCase 3 upperCase 3 Lprefix "
                           "2  macro  merge 2 modify 3 move 2 ");
  char *tmp25 =
      concat_string(tmp24, "msg  next 1 overlay 1 parse preserve 4 purge 3 put "
                           "putD query 1 quit  read recover 3 ");
  char *tmp26 =
      concat_string(tmp25, "refresh renum 3 repeat 3 replace 1 Creplace 2 "
                           "reset 3 restore 4 rgtLEFT right 2 left ");
  char *tmp27 =
      concat_string(tmp26, "2  save  set  shift 2  si  sort  sos  stack 3 "
                           "status 4 top  transfer 3  type 1  up 1 ");
  const char *table = tmp27;
  const char *sentence =
      "riG   rePEAT copies  put mo   rest    types   fup.    6\npoweRin";
  int tbl = readTable(table);
  int commands = (list_string)(tbl.data["commands"]);
  list_int mins = (list_int)(tbl.data["mins"]);
  int words = fields(sentence);
  int results = validate(commands, mins, words);
  const char *out1 = "user words:";
  int k = 0;
  while (k < words.len) {
    char *tmp28 = concat_string(out1, " ");
    out1 = tmp28;
    if (k < words.len - 1) {
      out1 = out1 + padRight(words.data[k], strlen(results.data[k]));
    } else {
      char *tmp29 = concat_string(out1, words.data[k]);
      out1 = tmp29;
    }
    k = k + 1;
  }
  printf("%s\n", out1);
  printf("%s\n", "full words: " + join(results, " "));
}

int main() {
  main();
  return 0;
}
